# cc-switch

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  vite.web.config.ts
.github/workflows/: release-docker.yml
crates/cc-switch-core/: Cargo.toml
crates/cc-switch-core/src/: app_store.rs  lib.rs
crates/cc-switch-core/src/mcp/: gemini.rs  mod.rs
crates/cc-switch-core/src/proxy/: failover_switch.rs  mod.rs
crates/cc-switch-core/src/services/: mod.rs
crates/cc-switch-service/: Cargo.toml
crates/cc-switch-service/src/: main.rs
crates/tauri-stub/: Cargo.toml
crates/tauri-stub/src/: lib.rs
src-tauri/src/services/: usage_stats.rs
web/: README.md  index.html  main.tsx
web/tauri-shim/: plugin-process.ts  plugin-updater.ts
web/tauri-shim/api/: app.ts  core.ts  event.ts  path.ts
web/tauri-shim/internal/: invoke.ts  storage.ts
