[package]
name = "cc-switch-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
base64 = "0.22"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
futures = "0.3"
hyper = { version = "1.0", features = ["full"] }
indexmap = { version = "2", features = ["serde"] }
log = "0.4"
once_cell = "1.21.3"
regex = "1.10"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream", "socks"] }
rquickjs = { version = "0.8", features = ["array-buffer", "classes"] }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
rust_decimal = "1.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
toml = "0.8"
toml_edit = "0.22"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }
zip = "2.2"
axum = "0.7"
tauri = { path = "../tauri-stub" }
