[package]
name = "cc-switch-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT"

[dependencies]
cc-switch-core = { path = "../cc-switch-core" }
anyhow = "1.0"
async-stream = "0.3"
axum = "0.7"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
env_logger = "0.11"

tempfile = "3"
